crates/cli/tests/snapshots/test__cli_inspect_help_snapshot.snap
---
source: crates/cli/tests/test.rs
expression: output
---
Inspect a Wasm Component

Usage: wasm inspect [OPTIONS] <INPUT>

Arguments:
  <INPUT>
          Path to a .wasm to inspect

Options:
      --json
          Output in JSON encoding

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output.
          
          Can also be controlled via environment variables: - NO_COLOR=1 (disables color) - CLICOLOR=0 (disables color) - CLICOLOR_FORCE=1 (forces color)
          
          [default: auto]
          [possible values: auto, always, never]
