crates/cli/tests/snapshots/test__cli_local_help_snapshot.snap
---
source: crates/cli/tests/test.rs
expression: output
---
Detect and manage local WASM files

Usage: wasm local [OPTIONS] <COMMAND>

Commands:
  list  List local WASM files in the current directory
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
