crates/cli/tests/snapshots/test__cli_package_tags_help_snapshot.snap
---
source: crates/cli/tests/test.rs
expression: output
---
List all available tags for a component

Usage: wasm package tags [OPTIONS] <REFERENCE>

Arguments:
  <REFERENCE>
          The reference to list tags for (e.g., ghcr.io/example/component)

Options:
      --signatures
          Include signature tags (ending in .sig)

      --attestations
          Include attestation tags (ending in .att)

      --refresh
          Force refresh from registry, bypassing cache

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output.
          
          Can also be controlled via environment variables: - NO_COLOR=1 (disables color) - CLICOLOR=0 (disables color) - CLICOLOR_FORCE=1 (forces color)
          
          [default: auto]
          [possible values: auto, always, never]
